[gd_scene load_steps=11 format=3 uid="uid://b5ecew7bcpv"]

[ext_resource type="Script" uid="uid://5eyf7m8by47u" path="res://UI/Buttons/AbilityBtn/ability_btn.gd" id="1_msfmp"]
[ext_resource type="LabelSettings" uid="uid://nrxe2mbka1e4" path="res://Fonts/game/label_small_thick.tres" id="2_25rd3"]
[ext_resource type="PackedScene" uid="uid://c5ld7n1ycuql2" path="res://UI/Buttons/IconBtn/IconBtn.tscn" id="3_fb3xu"]
[ext_resource type="LabelSettings" uid="uid://bhvjm3opd1txx" path="res://Fonts/game/label_small.tres" id="4_xsc2d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_msfmp"]
bg_color = Color(0.169, 0.169, 0.169, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_y4ccn"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -20), Vector2(0, -15)]
}

[sub_resource type="Animation" id="Animation_msfmp"]
resource_name = "pointing"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(19, -30), Vector2(19, -25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eqmuv"]
_data = {
&"RESET": SubResource("Animation_y4ccn"),
&"pointing": SubResource("Animation_msfmp")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_26aci"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wp1od"]
bg_color = Color(0, 0, 0, 0.560784)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="AbilityBtn" type="PanelContainer"]
modulate = Color(1, 1, 1, 0.5)
offset_right = 69.0
offset_bottom = 62.0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_msfmp")
script = ExtResource("1_msfmp")
text_active_color = Color(1, 1, 1, 1)
text_inactive_color = Color(0.662745, 0.662745, 0.662745, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Control/SelectedIcon")
libraries = {
&"": SubResource("AnimationLibrary_eqmuv")
}

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 2

[node name="SelectedIcon" parent="Control" instance=ExtResource("3_fb3xu")]
visible = false
layout_mode = 2
offset_top = -20.0
offset_right = 20.0
offset_bottom = 0.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
icon = 37
is_hoverable = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = -5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="TitleHeader" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 5
text = "NONE"
label_settings = ExtResource("2_25rd3")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
text_overrun_behavior = 2
ellipsis_char = ""

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_26aci")

[node name="IconBtn" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/PanelContainer" instance=ExtResource("3_fb3xu")]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
icon = 77
is_hoverable = false

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wp1od")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="KeyLabel" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "X"
label_settings = ExtResource("4_xsc2d")
horizontal_alignment = 1
vertical_alignment = 1
